[package]
name = "benchmark-framework"
version = "0.1.0"
edition = "2024"

[dependencies]
frida-poc = { workspace = true }
hotstuff_rs = { workspace = true }
frida-app = { workspace = true }
rand_core = { workspace = true }
dashmap = "6.1.0"
bytes = { workspace = true }
logging = { workspace = true }
tracing = { workspace = true }
benchmark-common = { workspace = true }
