# defrida_app/Cargo.toml

[package]
name = "defrida-app"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
common = { workspace = true }
frida-poc = { workspace = true }
hotstuff_rs = { workspace = true }
winter-crypto = { workspace = true }
winter-fri = { workspace = true }
winter-math = { workspace = true }
winter-rand-utils = { workspace = true }
winter-utils = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
