[package]
name = "frida-app"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
common = { workspace = true }
ed25519-dalek = { workspace = true }
frida-poc = { workspace = true }
hotstuff_rs = { workspace = true }
winter-crypto = { workspace = true }
winter-fri = { workspace = true }
winter-math = { workspace = true }
winter-rand-utils = { workspace = true }
winter-utils = { workspace = true }

[dev-dependencies]
rand_core = { workspace = true }
winter-rand-utils = { workspace = true }
