[package]
name = "benchmark"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]

# Core utilities
bytes = { workspace = true }
# Workspace dependencies
common = { workspace = true }

# CSV output
csv = { workspace = true }
dashmap = { workspace = true }
defrida-app = { workspace = true }
frida-app = { workspace = true }
frida-poc = { workspace = true }
hotstuff_rs = { workspace = true }
itertools = { workspace = true }
rand_core = { workspace = true }

# Configuration parsing
serde = { workspace = true, features = ["derive"] }
serde_yml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
